c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_struct_member.c
struct s;

extern struct s foo;

int main(void) {
  return foo.a; // can't get member of incomplete structure type
}